--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "5.1.5"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react-vertical-timeline-component": "^3.3.3"
   }
 }
